--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -1,5 +1,4 @@
-name: Quarto Publish (HTML only)
-
+name: Quarto Publish (HTML + PDF)
 on:
   push:
     branches: [ "main" ]
@@ -7,18 +6,20 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          # pin to a real release to avoid 404s
+          version: "1.6.40"
 
-      - name: Check Quarto
-        run: quarto --version
+      - name: Install TinyTeX (for PDF)
+        uses: r-lib/actions/setup-tinytex@v2
 
-      - name: Render site
+      - name: Render site (HTML + PDF from _quarto.yml)
         run: quarto render
 
       - name: Publish to GitHub Pages
